update analysis notebook: - finish EDA - make recomendation

--- a/data_analysis/get_data.ipynb
+++ b/data_analysis/get_data.ipynb
@@ -32,14 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f1c04e47",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "import gdown\n",
-    "import zipfile"
+    "import zipfile\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d8dd842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('raw_data', exist_ok=True)"
    ]
   },
   {
