--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -10206,7 +10206,7 @@
    "id": "9059869f",
    "metadata": {},
    "source": [
-    "Novamente, é possível perceber valores outliers na distribuição de gênero entre as regiões, obtendo em uma única região uma proporção de 2656% de homens/mulheres. \n",
+    "Novamente, é possível perceber valores outliers na distribuição de gênero entre as regiões, obtendo em uma única região uma proporção de 2.656% de homens para mulheres. \n",
     "\n",
     "Observa-se que os dados outliers representam uma quantidade pequena de regiões, já que no percentil 2% a distribuição entre homens/mulheres é de 63% (quase o dobro de mulheres que de homens) e no percentil 98% a distribuição de homens/mulheres é de 185% (1,8x mais homens do que mulheres). Esses valores são totalmente factíveis em uma população.\n",
     "\n",
@@ -18656,7 +18656,7 @@
    "id": "bd2b8a0f",
    "metadata": {},
    "source": [
-    "#### Receita mediana"
+    "#### Receita média"
    ]
   },
   {
